<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="handler"
            type="com.example.scoreboardassignment.MainActivityHandler" />

    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_centerInParent="true"
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="@dimen/noWidth"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:padding="@dimen/paddingLarge"
                        android:text="@string/TeamA"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/textVSmall"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:padding="@dimen/paddingSmall"
                        android:text=""
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/textLarge" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_ida1"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/marginSmall"
                        android:layout_marginLeft="@dimen/marginVLarge"
                        android:layout_marginRight="@dimen/marginVLarge"
                        android:layout_marginTop="@dimen/marginLarge"
                        android:onClick="@{()->handler.addTeamA()}"
                        android:text="@string/plus"
                        android:textSize="@dimen/textSmall" />
                </LinearLayout>


                <!-- Middle column -->

                <LinearLayout
                    android:layout_width="@dimen/noWidth"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ToggleButton
                        android:id="@+id/togglebutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:onClick="@{()->handler.changeTeam()}"
                        android:textOff="@string/serverA"
                        android:textOn="@string/serverB"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/teams_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:paddingTop="@dimen/paddingLarge"
                        android:text="@string/love"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/textSmall"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/rackets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/tennisicon"
                        android:gravity="center_horizontal"
                        android:scaleType="centerInside"
                        android:src="@drawable/rackets" />

                </LinearLayout>

                <!-- Team B score core column -->
                <LinearLayout
                    android:layout_width="@dimen/noWidth"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:padding="@dimen/paddingLarge"
                        android:text="@string/TeamB"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/textVSmall"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:padding="@dimen/paddingSmall"
                        android:text=""
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/textLarge" />

                    <Button
                        android:id="@+id/button_idb1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/marginSmall"
                        android:layout_marginLeft="@dimen/marginVLarge"
                        android:layout_marginRight="@dimen/marginVLarge"
                        android:layout_marginTop="@dimen/marginLarge"
                        android:onClick="@{()->handler.addTeamB()}"
                        android:text="@string/plus"
                        android:textSize="@dimen/textSmall" />

                </LinearLayout>

            </LinearLayout>



        </RelativeLayout>

    </ScrollView>
</layout>


